# RAG-Version-2

./: .gitignore  RAG system plan.md  README.md  dev.jsonl  pyproject.toml  requirements.txt
configs/: default.yaml  experiment_grid.yaml
medqa_rag/: __init__.py  config.py  experiment.py
medqa_rag/data/: __init__.py  coverage_gate.py  data_paths.py  download.py  medqa_loader.py  preprocess.py  statpearls_dataset.py
medqa_rag/evaluation/: __init__.py  error_analysis.py  harness.py  stats.py
medqa_rag/inference/: __init__.py  llm_client.py  parser.py  prompts.py
medqa_rag/rerank/: __init__.py  base.py  cross_encoder.py
medqa_rag/retrieval/: __init__.py  base.py  bm25.py  embedder.py  faiss_index.py  hybrid.py  query.py
scripts/: __init__.py  convert_statpearls.py  run_baseline.py  run_download.py  run_download_statpearls.py  run_embed.py  run_pipeline.py  run_preprocess.py  run_rag.py  run_sweep.py
tests/: conftest.py  test_harness.py  test_parser.py  test_preprocess.py  test_prompts.py  test_rerank.py  test_retrieval.py  test_stats.py
